--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
          
     <div id="f12">
      <div id="f13"> <h1>por favor, reproduce esta canción antes de leer</h1> 
-      <a href="https://open.spotify.com/track/6EBPGW7GqFlGYAY1fSXwjI?si=5spKltg4SJu6NXFOkXVvMw">> reproduces la canción. </a>
+      <a href="https://www.youtube.com/watch?v=x-0KoCAV4mc&list=RDx-0KoCAV4mc&start_radio=1">> reproduces la canción. </a>
        <span class="go">> seguir leyendo.</span>
       </div>
       
