--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div id="out-all">
   
-  <div id="f1"><h1>¿así que quieres participar en esta aventura?</h1>
+  <div id="f1"><h1>¿Así que quieres participar en esta aventura?</h1>
    
     <div class="decidir">
       <div class="si">> si!</div>
@@ -39,7 +39,7 @@
   
   
   
-    <div id="f4"><h3>¡VALE, VALE, NO ME GRITES! Pero, debo decirte una cosa.</h3>
+    <div id="f4"><h3>¡VALE AMOR, VALE, NO ME GRITES! Pero, debo decirte una cosa.</h3>
       <h2>Te mentí, esto no es una aventura, es un regalo.</h2>
     <div class="decidir">
       <div class="rega">> ¿un regalo? </div>
