--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>San Valentin Carta 1v</title>
+    <title>Carta de Amor </title>
 </head>
 <body>
-    <h1>¡Feliz San Valentín! ❤️</h1>
+    <h1>¡Feliz primer Mes! ❤️</h1>
     <div class="contenedor">
         <div class="envoltura-sobre">
             <div class="sobre">
