--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </div>
     </div>
     <!-- <script src="script_v2.js"></script> -->
-     <script src="script_v2.js"></script>
+     <script src="script_v2.js" defer></script>
 </body>
 </html>
