--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Carta de Amor </title>
 </head>
 <body>
-    <h1>¡Feliz primer Mes ! ❤️</h1>
+    <h1>¡Feliz Primer Mes ! ❤️</h1>
     <div class="contenedor">
         <div class="envoltura-sobre">
             <div class="sobre">
@@ -28,7 +28,6 @@
             <div class="solapa-izquierda"></div>
         </div>
     </div>
-    <!-- <script src="script_v2.js"></script> -->
-     <script src="script_v2.js" defer></script>
+    <script src="script_v2.js"></script>
 </body>
 </html>
