--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
             <div class="solapa-izquierda"></div>
         </div>
     </div>
-    <script src="script_v2.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
