--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Carta de Amor </title>
 </head>
 <body>
-    <h1>¡Feliz Primer Mes ! ❤️</h1>
+    <h1>¡Feliz Primer Mess ! ❤️</h1>
     <div class="contenedor">
         <div class="envoltura-sobre">
             <div class="sobre">
