--- a/index.html
+++ b/index.html
@@ -10,16 +10,37 @@
     <title>Carta de Amor </title>
 </head>
 <body>
-    <h1>¡Feliz Primer Mess ! ❤️</h1>
+    <h1>¡Feliz Primer Mes ! ❤️</h1>
     <div class="contenedor">
         <div class="envoltura-sobre">
             <div class="sobre">
                 <div class="carta">
                     <div class="contenido">
-                        <strong>Querida Estrella</strong>
+                        <strong>Mi Preciosa Vanessa</strong>
                         <p>
-                            Hoy es <strong>San Valentín</strong>, el día oficial de los <em>corazones</em>, el <em>chocolate</em> y las declaraciones de amor dramáticas (como en las telenovelas). Así que prepárate, porque aquí va la mía: Desde que te conocí, mi corazón late más rápido que <code>WiFi</code> gratis en una plaza pública. Eres más brillante que un mensaje de "<strong>te amo</strong>" en <strong>LED gigante</strong> y más dulce que el doble de caramelo en un café con extra de crema. Si fueras un algoritmo, serías el más eficiente: optimizas mi felicidad con la menor cantidad de esfuerzo. Si fueras un bug, serías el único que no querría corregir. Y si fueras una aplicación, serías la que siempre tengo anclada en mi pantalla principal. Gracias por hacer de mi vida una versión mejorada, sin errores (bueno, quizá con algunos, pero todos adorables). <br> <strong>Feliz San Valentín</strong>, mi <em>estrella favorita</em>. <br> Con mucho <strong>código</strong> (y <strong>amor</strong>), <br> Tu programador enamorado. <br> <span style="font-size: 0.9em; color: grey;">PD: Si esta carta fuera un programa, su salida sería:</span> <br> <code>"Eres lo mejor que me ha pasado."</code>
-                        </p>
+    Hoy celebramos nuestro <strong>primer mes</strong> juntos, y todavía me parece increíble lo rápido que pasó todo. 
+    Jamás pensé que estaría contigo, pero desde el <em>primer día</em> que te conocí, algo en ti me llamó tanto la atención, 
+    como si el destino me estuviera dando una señal. <br><br>
+
+    Volvimos a coincidir y hablamos un poco más, pero lo que realmente marcó el inicio de todo fue ese paseo a 
+    <em>Huanchaco</em>. Ese día, al regresar a tu casa y darnos ese <strong>primer beso</strong>, sentí que todo tenía sentido. 
+    Desde ese instante supe que algo especial estaba naciendo entre nosotros. <br><br>
+
+    Sé que lo nuestro no empezó siendo fácil, que había obstáculos y dudas, 
+    pero el <strong>amor pudo más</strong>. Poco a poco hemos ido construyendo algo más bonito, algo que es solo nuestro. 
+    Y hoy, al mirar atrás, me siento feliz de haber tomado esa decisión de estar contigo. <br><br>
+
+    Contigo siento <em>tranquilidad</em>, siento <em>paz</em>, y siento que no necesito nada más. 
+    No soy perfecto, pero cada día intento ser mejor por ti, por nosotros, porque lo único que quiero 
+    es hacerte <strong>muy feliz</strong> y seguir construyendo este camino juntos. <br><br>
+
+    Gracias por este mes, por ser tú, por regalarme tu cariño y tu tiempo. 
+    Te quiero muchísimo y me emociona todo lo que nos espera por vivir. <br><br>
+
+    💖 <strong>Feliz primer mes, mi amor.</strong> 💖 <br>
+    <span style="font-size: 0.9em; color: grey;">PD: Si esta historia fuera un código, su salida sería:</span> <br>
+    <code>"Tú y yo, siempre."</code>
+</p>
                     </div>
                 </div>
             </div>
