--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <div class="sobre">
                 <div class="carta">
                     <div class="contenido">
-                        <strong>Mi Preciosa Vanessa</strong>
+                        <strong>Mi Amor Preciosa</strong>
+                        <br><br>
                         <p>
     Hoy celebramos nuestro <strong>primer mes</strong> juntos, y todavía me parece increíble lo rápido que pasó todo. 
     Jamás pensé que estaría contigo, pero desde el <em>primer día</em> que te conocí, algo en ti me llamó tanto la atención, 
@@ -38,8 +39,6 @@
     Te quiero muchísimo y me emociona todo lo que nos espera por vivir. <br><br>
 
     💖 <strong>Feliz primer mes, mi amor.</strong> 💖 <br>
-    <span style="font-size: 0.9em; color: grey;">PD: Si esta historia fuera un código, su salida sería:</span> <br>
-    <code>"Tú y yo, siempre."</code>
 </p>
                     </div>
                 </div>
